# binary-souls

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
crates/ai-agent/: Cargo.toml
crates/ai-agent/src/: chat.rs  conv.rs  error.rs  gpts.rs  lib.rs  model.rs
crates/ai-agent/src/tools/: ai_tools.rs  spec.rs  weather.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  client.rs  eventloop.rs  lib.rs  types.rs
examples/: c01-chat.rs  c02-tool-calls.rs  c03-tool-responses.rs  c04-conv.rs  c05-schema.rs  c06-joinset.rs
examples/swarms-agent-financial/: agent.py  pyproject.toml
examples/swarms-agent-financial/agent_workspace/prompts/: prompt-id-1a4758e9641a4e50b7893c9ccfeca841.json  prompt-id-20aa472bc4714be38ac129e3a134898b.json  prompt-id-6fc35fe90c7148808193558dbf2696a3.json  prompt-id-9f3a80b8ab6541b5be55647e3edb1fe1.json  prompt-id-c1a9d4ae3cee420dbf1024134271fc26.json  prompt-id-cf7125981294443b853a5bdaa8b6a09f.json  prompt-id-f8651f665e2541fbbf4f80a8ad834773.json
spacejar/: .editorconfig  .gitignore  Cargo.toml  build.sh  docs  noxfile.py  pyproject.toml  requirements.txt
spacejar/spacejar/: __init__.py  model_runtime.pyi  submodule.pyi
spacejar/src/: bindings.rs  blockchain.rs  data.rs  error.rs  lib.rs  model.rs  runtime.rs
spacejar/tests/: test_dominance_subscore.py  test_model_runtime.py  test_submodule.py
src/: agent.rs  cli.rs  main.rs
src/network/: client.rs  eventloop.rs  mod.rs  types.rs
