[package]
name = "binary-souls"
version = "0.1.0"
edition = "2021"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
log = "0.4.22"
human-panic = "2.0.0"
better-panic = "0.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.15.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5.9", features = ["cargo", "derive"] }
clap_complete = "4.5.8"
serde_json = "1.0.134"
serde_yaml = "0.9"
futures = "0.3.31"
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
libp2p = { version = "0.54.1", features = [
	"tokio",
	"cbor",
	"dns",
	"kad",
	"noise",
	"macros",
	"request-response",
	"tcp",
	"websocket",
	"yamux",
] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.1.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
enable-beta-commands = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
enable-beta-commands = false

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
enable-beta-commands = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
enable-beta-commands = true
