[package]
name = "model-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]

[lib]
name = "model_runtime"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "model_runtime"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
human-panic = "2.0.0"
better-panic = "0.3.0"
log = "0.4.22"
anyhow = "1.0.95"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.15.0"
reqwest = { version = "0.12.9", features = [
  "json",
  "rustls-tls",
], default-features = false }
async-trait = "0.1.84"
typed-builder = "0.20.0"
zstd = "0.13.2"
toml = "0.8.19"
bincode = "1.3.3"
glob = "0.3"
hex-literal = "0.4.1"
sha2 = "0.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9"
futures = "0.3.31"
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
thiserror = "2.0.11"

[profile.release]
codegen-units = 1
lto = true
