[package]
name = "network"
version = "0.1.0"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
description = "Network module for Binary Souls"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
async-openai = "0.27.1"
libp2p = { version = "0.55.0", features = [
	"tokio",
	"gossipsub",
	"cbor",
	"dns",
	"kad",
	"noise",
	"macros",
	"request-response",
	"tcp",
	"websocket",
	"yamux",
	"tls",
	"autonat",
	"identify",
	"mdns",
	"quic",
	"ping",
	"relay",
	"rendezvous",
	"upnp",
] }
sha256 = "1.5.0"
