[project]
name = "swarms-agent-financial"
version = "0.1.0"
description = "Example of spacejar running a financial agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "serpapi>=0.1.5",
    "swarms>=7.6.0",
    "swarms-memory>=0.1.2",
    "swarms-tools>=0.1.7",
    "tavily-python>=0.5.1",
    "tweepy>=4.15.0",
]
